parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTE_CHAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON declaracion_global funcion main bloque
Rule 2     main -> MAIN O_PARENTHESIS C_PARENTHESIS
Rule 3     bloque -> O_CBRACKET bloque_prime C_CBRACKET
Rule 4     bloque_prime -> estatuto bloque_prime
Rule 5     bloque_prime -> epsilon
Rule 6     declaracion_funcion -> declaracion
Rule 7     declaracion_global -> declaracion
Rule 8     declaracion -> declaracion_base
Rule 9     declaracion -> declaracion_base declaracion
Rule 10    declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON
Rule 11    declaracion_prime -> declaracion_variable
Rule 12    declaracion_prime -> declaracion_variable COMMA declaracion_prime
Rule 13    declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
Rule 14    declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
Rule 15    declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET
Rule 16    declaracion_variable -> ID
Rule 17    declaracion_tipo -> INT
Rule 18    declaracion_tipo -> FLOAT
Rule 19    declaracion_tipo -> CHAR
Rule 20    declaracion_tipo -> STRING
Rule 21    tipo -> INT
Rule 22    tipo -> FLOAT
Rule 23    tipo -> CHAR
Rule 24    tipo -> STRING
Rule 25    funcion -> funcion_base funcion
Rule 26    funcion -> epsilon
Rule 27    funcion_base -> FUNCTION funcion_ident O_PARENTHESIS funcion_prime C_PARENTHESIS declaracion_funcion bloque
Rule 28    funcion_prime -> tipo ID
Rule 29    funcion_prime -> tipo ID COMMA funcion_prime
Rule 30    funcion_ident -> VOID ID
Rule 31    funcion_ident -> INT ID
Rule 32    funcion_ident -> FLOAT ID
Rule 33    funcion_ident -> CHAR ID
Rule 34    funcion_ident -> STRING ID
Rule 35    variable -> ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
Rule 36    variable -> ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
Rule 37    variable -> ID O_ABRACKET exp C_ABRACKET
Rule 38    variable -> ID
Rule 39    estatuto -> asignacion SEMICOLON
Rule 40    estatuto -> llamada SEMICOLON
Rule 41    estatuto -> retorno SEMICOLON
Rule 42    estatuto -> lectura SEMICOLON
Rule 43    estatuto -> escritura SEMICOLON
Rule 44    estatuto -> decision
Rule 45    estatuto -> while
Rule 46    estatuto -> for
Rule 47    asignacion -> variable ASSIGN asignacion_expr
Rule 48    asignacion_expr -> expr
Rule 49    llamada -> ID O_PARENTHESIS llamada_prime C_PARENTHESIS
Rule 50    llamada_prime -> exp
Rule 51    llamada_prime -> exp COMMA llamada_prime
Rule 52    retorno -> RETURN O_PARENTHESIS expr C_PARENTHESIS
Rule 53    lectura -> READ O_PARENTHESIS lectura_prime C_PARENTHESIS
Rule 54    lectura_prime -> variable
Rule 55    lectura_prime -> variable COMMA lectura_prime
Rule 56    escritura -> WRITE O_PARENTHESIS escritura_prime C_PARENTHESIS
Rule 57    escritura_prime -> expr
Rule 58    escritura_prime -> escritura_string
Rule 59    escritura_prime -> expr COMMA escritura_prime
Rule 60    escritura_prime -> escritura_string COMMA escritura_prime
Rule 61    escritura_string -> CTE_STRING
Rule 62    decision -> IF O_PARENTHESIS decision_expr C_PARENTHESIS bloque else
Rule 63    decision_expr -> expr
Rule 64    else -> else_prime bloque
Rule 65    else -> epsilon
Rule 66    else_prime -> ELSE
Rule 67    while -> while_prime while_expr bloque
Rule 68    while_prime -> WHILE
Rule 69    while_expr -> O_PARENTHESIS expr C_PARENTHESIS
Rule 70    for -> FOR for_asignacion for_to for_exp bloque
Rule 71    for_asignacion -> variable ASSIGN for_asignacion_expr
Rule 72    for_asignacion_expr -> expr
Rule 73    for_to -> TO
Rule 74    for_exp -> exp
Rule 75    expr -> or
Rule 76    or -> and
Rule 77    or -> and or_operador or
Rule 78    or_operador -> OR
Rule 79    and -> equal
Rule 80    and -> equal and_operador and
Rule 81    and_operador -> AND
Rule 82    equal -> compare
Rule 83    equal -> compare equal_operador compare
Rule 84    equal_operador -> EQUAL
Rule 85    equal_operador -> NOT_EQUAL
Rule 86    compare -> exp
Rule 87    compare -> exp compare_operador exp
Rule 88    compare_operador -> GREATER
Rule 89    compare_operador -> LESSER
Rule 90    compare_operador -> GREATER_EQUAL
Rule 91    compare_operador -> LESSER_EQUAL
Rule 92    exp -> termino
Rule 93    exp -> termino exp_operador exp
Rule 94    exp_operador -> PLUS
Rule 95    exp_operador -> MINUS
Rule 96    termino -> factor
Rule 97    termino -> factor termino_operador termino
Rule 98    termino_operador -> TIMES
Rule 99    termino_operador -> DIVIDE
Rule 100   termino_operador -> MODULE
Rule 101   factor -> variable
Rule 102   factor -> O_PARENTHESIS expr C_PARENTHESIS
Rule 103   factor -> llamada
Rule 104   factor -> cte
Rule 105   factor -> PLUS cte
Rule 106   factor -> MINUS cte
Rule 107   cte -> CTE_INT
Rule 108   cte -> CTE_FLOAT
Rule 109   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 81
ASSIGN               : 47 71
CHAR                 : 19 23 33
COLON                : 10
COMMA                : 12 29 51 55 59 60
CTE_CHAR             : 
CTE_FLOAT            : 108
CTE_INT              : 13 13 13 14 14 15 107
CTE_STRING           : 61
C_ABRACKET           : 13 13 13 14 14 15 35 35 35 36 36 37
C_CBRACKET           : 3
C_PARENTHESIS        : 2 27 49 52 53 56 62 69 102
DIVIDE               : 99
ELSE                 : 66
EQUAL                : 84
FLOAT                : 18 22 32
FOR                  : 70
FUNCTION             : 27
GREATER              : 88
GREATER_EQUAL        : 90
ID                   : 1 13 14 15 16 28 29 30 31 32 33 34 35 36 37 38 49
IF                   : 62
INT                  : 17 21 31
LESSER               : 89
LESSER_EQUAL         : 91
LET                  : 10
MAIN                 : 2
MINUS                : 95 106
MODULE               : 100
NOT_EQUAL            : 85
OR                   : 78
O_ABRACKET           : 13 13 13 14 14 15 35 35 35 36 36 37
O_CBRACKET           : 3
O_PARENTHESIS        : 2 27 49 52 53 56 62 69 102
PLUS                 : 94 105
PROGRAM              : 1
READ                 : 53
RETURN               : 52
SEMICOLON            : 1 10 39 40 41 42 43
STRING               : 20 24 34
TIMES                : 98
TO                   : 73
VOID                 : 30
WHILE                : 68
WRITE                : 56
error                : 

Nonterminals, with rules where they appear

and                  : 76 77 80
and_operador         : 80
asignacion           : 39
asignacion_expr      : 47
bloque               : 1 27 62 64 67 70
bloque_prime         : 3 4
compare              : 82 83 83
compare_operador     : 87
cte                  : 104 105 106
decision             : 44
decision_expr        : 62
declaracion          : 6 7 9
declaracion_base     : 8 9
declaracion_funcion  : 27
declaracion_global   : 1
declaracion_prime    : 10 12
declaracion_tipo     : 10
declaracion_variable : 11 12
else                 : 62
else_prime           : 64
epsilon              : 5 26 65
equal                : 79 80
equal_operador       : 83
escritura            : 43
escritura_prime      : 56 59 60
escritura_string     : 58 60
estatuto             : 4
exp                  : 35 35 35 36 36 37 50 51 74 86 87 87 93
exp_operador         : 93
expr                 : 48 52 57 59 63 69 72 102
factor               : 96 97
for                  : 46
for_asignacion       : 70
for_asignacion_expr  : 71
for_exp              : 70
for_to               : 70
funcion              : 1 25
funcion_base         : 25
funcion_ident        : 27
funcion_prime        : 27 29
lectura              : 42
lectura_prime        : 53 55
llamada              : 40 103
llamada_prime        : 49 51
main                 : 1
or                   : 75 77
or_operador          : 77
programa             : 0
retorno              : 41
termino              : 92 93 97
termino_operador     : 97
tipo                 : 28 29
variable             : 47 54 55 71 101
while                : 45
while_expr           : 67
while_prime          : 67

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON declaracion_global funcion main bloque

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON declaracion_global funcion main bloque

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON declaracion_global funcion main bloque

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . declaracion_global funcion main bloque
    (7) declaracion_global -> . declaracion
    (8) declaracion -> . declaracion_base
    (9) declaracion -> . declaracion_base declaracion
    (10) declaracion_base -> . LET declaracion_prime COLON declaracion_tipo SEMICOLON

    LET             shift and go to state 8

    declaracion_global             shift and go to state 5
    declaracion                    shift and go to state 6
    declaracion_base               shift and go to state 7

state 5

    (1) programa -> PROGRAM ID SEMICOLON declaracion_global . funcion main bloque
    (25) funcion -> . funcion_base funcion
    (26) funcion -> . epsilon
    (27) funcion_base -> . FUNCTION funcion_ident O_PARENTHESIS funcion_prime C_PARENTHESIS declaracion_funcion bloque
    (109) epsilon -> .

    FUNCTION        shift and go to state 12
    MAIN            reduce using rule 109 (epsilon -> .)

    funcion                        shift and go to state 9
    funcion_base                   shift and go to state 10
    epsilon                        shift and go to state 11

state 6

    (7) declaracion_global -> declaracion .

    FUNCTION        reduce using rule 7 (declaracion_global -> declaracion .)
    MAIN            reduce using rule 7 (declaracion_global -> declaracion .)


state 7

    (8) declaracion -> declaracion_base .
    (9) declaracion -> declaracion_base . declaracion
    (8) declaracion -> . declaracion_base
    (9) declaracion -> . declaracion_base declaracion
    (10) declaracion_base -> . LET declaracion_prime COLON declaracion_tipo SEMICOLON

    FUNCTION        reduce using rule 8 (declaracion -> declaracion_base .)
    MAIN            reduce using rule 8 (declaracion -> declaracion_base .)
    O_CBRACKET      reduce using rule 8 (declaracion -> declaracion_base .)
    LET             shift and go to state 8

    declaracion_base               shift and go to state 7
    declaracion                    shift and go to state 13

state 8

    (10) declaracion_base -> LET . declaracion_prime COLON declaracion_tipo SEMICOLON
    (11) declaracion_prime -> . declaracion_variable
    (12) declaracion_prime -> . declaracion_variable COMMA declaracion_prime
    (13) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET
    (16) declaracion_variable -> . ID

    ID              shift and go to state 16

    declaracion_prime              shift and go to state 14
    declaracion_variable           shift and go to state 15

state 9

    (1) programa -> PROGRAM ID SEMICOLON declaracion_global funcion . main bloque
    (2) main -> . MAIN O_PARENTHESIS C_PARENTHESIS

    MAIN            shift and go to state 18

    main                           shift and go to state 17

state 10

    (25) funcion -> funcion_base . funcion
    (25) funcion -> . funcion_base funcion
    (26) funcion -> . epsilon
    (27) funcion_base -> . FUNCTION funcion_ident O_PARENTHESIS funcion_prime C_PARENTHESIS declaracion_funcion bloque
    (109) epsilon -> .

    FUNCTION        shift and go to state 12
    MAIN            reduce using rule 109 (epsilon -> .)

    funcion_base                   shift and go to state 10
    funcion                        shift and go to state 19
    epsilon                        shift and go to state 11

state 11

    (26) funcion -> epsilon .

    MAIN            reduce using rule 26 (funcion -> epsilon .)


state 12

    (27) funcion_base -> FUNCTION . funcion_ident O_PARENTHESIS funcion_prime C_PARENTHESIS declaracion_funcion bloque
    (30) funcion_ident -> . VOID ID
    (31) funcion_ident -> . INT ID
    (32) funcion_ident -> . FLOAT ID
    (33) funcion_ident -> . CHAR ID
    (34) funcion_ident -> . STRING ID

    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24
    STRING          shift and go to state 25

    funcion_ident                  shift and go to state 20

state 13

    (9) declaracion -> declaracion_base declaracion .

    FUNCTION        reduce using rule 9 (declaracion -> declaracion_base declaracion .)
    MAIN            reduce using rule 9 (declaracion -> declaracion_base declaracion .)
    O_CBRACKET      reduce using rule 9 (declaracion -> declaracion_base declaracion .)


state 14

    (10) declaracion_base -> LET declaracion_prime . COLON declaracion_tipo SEMICOLON

    COLON           shift and go to state 26


state 15

    (11) declaracion_prime -> declaracion_variable .
    (12) declaracion_prime -> declaracion_variable . COMMA declaracion_prime

    COLON           reduce using rule 11 (declaracion_prime -> declaracion_variable .)
    COMMA           shift and go to state 27


state 16

    (13) declaracion_variable -> ID . O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> ID . O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> ID . O_ABRACKET CTE_INT C_ABRACKET
    (16) declaracion_variable -> ID .

    O_ABRACKET      shift and go to state 28
    COMMA           reduce using rule 16 (declaracion_variable -> ID .)
    COLON           reduce using rule 16 (declaracion_variable -> ID .)


state 17

    (1) programa -> PROGRAM ID SEMICOLON declaracion_global funcion main . bloque
    (3) bloque -> . O_CBRACKET bloque_prime C_CBRACKET

    O_CBRACKET      shift and go to state 30

    bloque                         shift and go to state 29

state 18

    (2) main -> MAIN . O_PARENTHESIS C_PARENTHESIS

    O_PARENTHESIS   shift and go to state 31


state 19

    (25) funcion -> funcion_base funcion .

    MAIN            reduce using rule 25 (funcion -> funcion_base funcion .)


state 20

    (27) funcion_base -> FUNCTION funcion_ident . O_PARENTHESIS funcion_prime C_PARENTHESIS declaracion_funcion bloque

    O_PARENTHESIS   shift and go to state 32


state 21

    (30) funcion_ident -> VOID . ID

    ID              shift and go to state 33


state 22

    (31) funcion_ident -> INT . ID

    ID              shift and go to state 34


state 23

    (32) funcion_ident -> FLOAT . ID

    ID              shift and go to state 35


state 24

    (33) funcion_ident -> CHAR . ID

    ID              shift and go to state 36


state 25

    (34) funcion_ident -> STRING . ID

    ID              shift and go to state 37


state 26

    (10) declaracion_base -> LET declaracion_prime COLON . declaracion_tipo SEMICOLON
    (17) declaracion_tipo -> . INT
    (18) declaracion_tipo -> . FLOAT
    (19) declaracion_tipo -> . CHAR
    (20) declaracion_tipo -> . STRING

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    CHAR            shift and go to state 41
    STRING          shift and go to state 42

    declaracion_tipo               shift and go to state 38

state 27

    (12) declaracion_prime -> declaracion_variable COMMA . declaracion_prime
    (11) declaracion_prime -> . declaracion_variable
    (12) declaracion_prime -> . declaracion_variable COMMA declaracion_prime
    (13) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> . ID O_ABRACKET CTE_INT C_ABRACKET
    (16) declaracion_variable -> . ID

    ID              shift and go to state 16

    declaracion_variable           shift and go to state 15
    declaracion_prime              shift and go to state 43

state 28

    (13) declaracion_variable -> ID O_ABRACKET . CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> ID O_ABRACKET . CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> ID O_ABRACKET . CTE_INT C_ABRACKET

    CTE_INT         shift and go to state 44


state 29

    (1) programa -> PROGRAM ID SEMICOLON declaracion_global funcion main bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON declaracion_global funcion main bloque .)


state 30

    (3) bloque -> O_CBRACKET . bloque_prime C_CBRACKET
    (4) bloque_prime -> . estatuto bloque_prime
    (5) bloque_prime -> . epsilon
    (39) estatuto -> . asignacion SEMICOLON
    (40) estatuto -> . llamada SEMICOLON
    (41) estatuto -> . retorno SEMICOLON
    (42) estatuto -> . lectura SEMICOLON
    (43) estatuto -> . escritura SEMICOLON
    (44) estatuto -> . decision
    (45) estatuto -> . while
    (46) estatuto -> . for
    (109) epsilon -> .
    (47) asignacion -> . variable ASSIGN asignacion_expr
    (49) llamada -> . ID O_PARENTHESIS llamada_prime C_PARENTHESIS
    (52) retorno -> . RETURN O_PARENTHESIS expr C_PARENTHESIS
    (53) lectura -> . READ O_PARENTHESIS lectura_prime C_PARENTHESIS
    (56) escritura -> . WRITE O_PARENTHESIS escritura_prime C_PARENTHESIS
    (62) decision -> . IF O_PARENTHESIS decision_expr C_PARENTHESIS bloque else
    (67) while -> . while_prime while_expr bloque
    (70) for -> . FOR for_asignacion for_to for_exp bloque
    (35) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (36) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (37) variable -> . ID O_ABRACKET exp C_ABRACKET
    (38) variable -> . ID
    (68) while_prime -> . WHILE

    C_CBRACKET      reduce using rule 109 (epsilon -> .)
    ID              shift and go to state 57
    RETURN          shift and go to state 58
    READ            shift and go to state 59
    WRITE           shift and go to state 60
    IF              shift and go to state 61
    FOR             shift and go to state 63
    WHILE           shift and go to state 64

    bloque_prime                   shift and go to state 45
    estatuto                       shift and go to state 46
    epsilon                        shift and go to state 47
    asignacion                     shift and go to state 48
    llamada                        shift and go to state 49
    retorno                        shift and go to state 50
    lectura                        shift and go to state 51
    escritura                      shift and go to state 52
    decision                       shift and go to state 53
    while                          shift and go to state 54
    for                            shift and go to state 55
    variable                       shift and go to state 56
    while_prime                    shift and go to state 62

state 31

    (2) main -> MAIN O_PARENTHESIS . C_PARENTHESIS

    C_PARENTHESIS   shift and go to state 65


state 32

    (27) funcion_base -> FUNCTION funcion_ident O_PARENTHESIS . funcion_prime C_PARENTHESIS declaracion_funcion bloque
    (28) funcion_prime -> . tipo ID
    (29) funcion_prime -> . tipo ID COMMA funcion_prime
    (21) tipo -> . INT
    (22) tipo -> . FLOAT
    (23) tipo -> . CHAR
    (24) tipo -> . STRING

    INT             shift and go to state 68
    FLOAT           shift and go to state 69
    CHAR            shift and go to state 70
    STRING          shift and go to state 71

    funcion_prime                  shift and go to state 66
    tipo                           shift and go to state 67

state 33

    (30) funcion_ident -> VOID ID .

    O_PARENTHESIS   reduce using rule 30 (funcion_ident -> VOID ID .)


state 34

    (31) funcion_ident -> INT ID .

    O_PARENTHESIS   reduce using rule 31 (funcion_ident -> INT ID .)


state 35

    (32) funcion_ident -> FLOAT ID .

    O_PARENTHESIS   reduce using rule 32 (funcion_ident -> FLOAT ID .)


state 36

    (33) funcion_ident -> CHAR ID .

    O_PARENTHESIS   reduce using rule 33 (funcion_ident -> CHAR ID .)


state 37

    (34) funcion_ident -> STRING ID .

    O_PARENTHESIS   reduce using rule 34 (funcion_ident -> STRING ID .)


state 38

    (10) declaracion_base -> LET declaracion_prime COLON declaracion_tipo . SEMICOLON

    SEMICOLON       shift and go to state 72


state 39

    (17) declaracion_tipo -> INT .

    SEMICOLON       reduce using rule 17 (declaracion_tipo -> INT .)


state 40

    (18) declaracion_tipo -> FLOAT .

    SEMICOLON       reduce using rule 18 (declaracion_tipo -> FLOAT .)


state 41

    (19) declaracion_tipo -> CHAR .

    SEMICOLON       reduce using rule 19 (declaracion_tipo -> CHAR .)


state 42

    (20) declaracion_tipo -> STRING .

    SEMICOLON       reduce using rule 20 (declaracion_tipo -> STRING .)


state 43

    (12) declaracion_prime -> declaracion_variable COMMA declaracion_prime .

    COLON           reduce using rule 12 (declaracion_prime -> declaracion_variable COMMA declaracion_prime .)


state 44

    (13) declaracion_variable -> ID O_ABRACKET CTE_INT . C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> ID O_ABRACKET CTE_INT . C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> ID O_ABRACKET CTE_INT . C_ABRACKET

    C_ABRACKET      shift and go to state 73


state 45

    (3) bloque -> O_CBRACKET bloque_prime . C_CBRACKET

    C_CBRACKET      shift and go to state 74


state 46

    (4) bloque_prime -> estatuto . bloque_prime
    (4) bloque_prime -> . estatuto bloque_prime
    (5) bloque_prime -> . epsilon
    (39) estatuto -> . asignacion SEMICOLON
    (40) estatuto -> . llamada SEMICOLON
    (41) estatuto -> . retorno SEMICOLON
    (42) estatuto -> . lectura SEMICOLON
    (43) estatuto -> . escritura SEMICOLON
    (44) estatuto -> . decision
    (45) estatuto -> . while
    (46) estatuto -> . for
    (109) epsilon -> .
    (47) asignacion -> . variable ASSIGN asignacion_expr
    (49) llamada -> . ID O_PARENTHESIS llamada_prime C_PARENTHESIS
    (52) retorno -> . RETURN O_PARENTHESIS expr C_PARENTHESIS
    (53) lectura -> . READ O_PARENTHESIS lectura_prime C_PARENTHESIS
    (56) escritura -> . WRITE O_PARENTHESIS escritura_prime C_PARENTHESIS
    (62) decision -> . IF O_PARENTHESIS decision_expr C_PARENTHESIS bloque else
    (67) while -> . while_prime while_expr bloque
    (70) for -> . FOR for_asignacion for_to for_exp bloque
    (35) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (36) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (37) variable -> . ID O_ABRACKET exp C_ABRACKET
    (38) variable -> . ID
    (68) while_prime -> . WHILE

    C_CBRACKET      reduce using rule 109 (epsilon -> .)
    ID              shift and go to state 57
    RETURN          shift and go to state 58
    READ            shift and go to state 59
    WRITE           shift and go to state 60
    IF              shift and go to state 61
    FOR             shift and go to state 63
    WHILE           shift and go to state 64

    estatuto                       shift and go to state 46
    bloque_prime                   shift and go to state 75
    epsilon                        shift and go to state 47
    asignacion                     shift and go to state 48
    llamada                        shift and go to state 49
    retorno                        shift and go to state 50
    lectura                        shift and go to state 51
    escritura                      shift and go to state 52
    decision                       shift and go to state 53
    while                          shift and go to state 54
    for                            shift and go to state 55
    variable                       shift and go to state 56
    while_prime                    shift and go to state 62

state 47

    (5) bloque_prime -> epsilon .

    C_CBRACKET      reduce using rule 5 (bloque_prime -> epsilon .)


state 48

    (39) estatuto -> asignacion . SEMICOLON

    SEMICOLON       shift and go to state 76


state 49

    (40) estatuto -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 77


state 50

    (41) estatuto -> retorno . SEMICOLON

    SEMICOLON       shift and go to state 78


state 51

    (42) estatuto -> lectura . SEMICOLON

    SEMICOLON       shift and go to state 79


state 52

    (43) estatuto -> escritura . SEMICOLON

    SEMICOLON       shift and go to state 80


state 53

    (44) estatuto -> decision .

    ID              reduce using rule 44 (estatuto -> decision .)
    RETURN          reduce using rule 44 (estatuto -> decision .)
    READ            reduce using rule 44 (estatuto -> decision .)
    WRITE           reduce using rule 44 (estatuto -> decision .)
    IF              reduce using rule 44 (estatuto -> decision .)
    FOR             reduce using rule 44 (estatuto -> decision .)
    WHILE           reduce using rule 44 (estatuto -> decision .)
    C_CBRACKET      reduce using rule 44 (estatuto -> decision .)


state 54

    (45) estatuto -> while .

    ID              reduce using rule 45 (estatuto -> while .)
    RETURN          reduce using rule 45 (estatuto -> while .)
    READ            reduce using rule 45 (estatuto -> while .)
    WRITE           reduce using rule 45 (estatuto -> while .)
    IF              reduce using rule 45 (estatuto -> while .)
    FOR             reduce using rule 45 (estatuto -> while .)
    WHILE           reduce using rule 45 (estatuto -> while .)
    C_CBRACKET      reduce using rule 45 (estatuto -> while .)


state 55

    (46) estatuto -> for .

    ID              reduce using rule 46 (estatuto -> for .)
    RETURN          reduce using rule 46 (estatuto -> for .)
    READ            reduce using rule 46 (estatuto -> for .)
    WRITE           reduce using rule 46 (estatuto -> for .)
    IF              reduce using rule 46 (estatuto -> for .)
    FOR             reduce using rule 46 (estatuto -> for .)
    WHILE           reduce using rule 46 (estatuto -> for .)
    C_CBRACKET      reduce using rule 46 (estatuto -> for .)


state 56

    (47) asignacion -> variable . ASSIGN asignacion_expr

    ASSIGN          shift and go to state 81


state 57

    (49) llamada -> ID . O_PARENTHESIS llamada_prime C_PARENTHESIS
    (35) variable -> ID . O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (36) variable -> ID . O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (37) variable -> ID . O_ABRACKET exp C_ABRACKET
    (38) variable -> ID .

    O_PARENTHESIS   shift and go to state 82
    O_ABRACKET      shift and go to state 83
    ASSIGN          reduce using rule 38 (variable -> ID .)


state 58

    (52) retorno -> RETURN . O_PARENTHESIS expr C_PARENTHESIS

    O_PARENTHESIS   shift and go to state 84


state 59

    (53) lectura -> READ . O_PARENTHESIS lectura_prime C_PARENTHESIS

    O_PARENTHESIS   shift and go to state 85


state 60

    (56) escritura -> WRITE . O_PARENTHESIS escritura_prime C_PARENTHESIS

    O_PARENTHESIS   shift and go to state 86


state 61

    (62) decision -> IF . O_PARENTHESIS decision_expr C_PARENTHESIS bloque else

    O_PARENTHESIS   shift and go to state 87


state 62

    (67) while -> while_prime . while_expr bloque
    (69) while_expr -> . O_PARENTHESIS expr C_PARENTHESIS

    O_PARENTHESIS   shift and go to state 89

    while_expr                     shift and go to state 88

state 63

    (70) for -> FOR . for_asignacion for_to for_exp bloque
    (71) for_asignacion -> . variable ASSIGN for_asignacion_expr
    (35) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (36) variable -> . ID O_ABRACKET exp C_ABRACKET O_ABRACKET exp C_ABRACKET
    (37) variable -> . ID O_ABRACKET exp C_ABRACKET
    (38) variable -> . ID

    ID              shift and go to state 92

    for_asignacion                 shift and go to state 90
    variable                       shift and go to state 91

state 64

    (68) while_prime -> WHILE .

    O_PARENTHESIS   reduce using rule 68 (while_prime -> WHILE .)


state 65

    (2) main -> MAIN O_PARENTHESIS C_PARENTHESIS .

    O_CBRACKET      reduce using rule 2 (main -> MAIN O_PARENTHESIS C_PARENTHESIS .)


state 66

    (27) funcion_base -> FUNCTION funcion_ident O_PARENTHESIS funcion_prime . C_PARENTHESIS declaracion_funcion bloque

    C_PARENTHESIS   shift and go to state 93


state 67

    (28) funcion_prime -> tipo . ID
    (29) funcion_prime -> tipo . ID COMMA funcion_prime

    ID              shift and go to state 94


state 68

    (21) tipo -> INT .

    ID              reduce using rule 21 (tipo -> INT .)


state 69

    (22) tipo -> FLOAT .

    ID              reduce using rule 22 (tipo -> FLOAT .)


state 70

    (23) tipo -> CHAR .

    ID              reduce using rule 23 (tipo -> CHAR .)


state 71

    (24) tipo -> STRING .

    ID              reduce using rule 24 (tipo -> STRING .)


state 72

    (10) declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON .

    LET             reduce using rule 10 (declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON .)
    FUNCTION        reduce using rule 10 (declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON .)
    MAIN            reduce using rule 10 (declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON .)
    O_CBRACKET      reduce using rule 10 (declaracion_base -> LET declaracion_prime COLON declaracion_tipo SEMICOLON .)


state 73

    (13) declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET . O_ABRACKET CTE_INT C_ABRACKET O_ABRACKET CTE_INT C_ABRACKET
    (14) declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET . O_ABRACKET CTE_INT C_ABRACKET
    (15) declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET .

    O_ABRACKET      shift and go to state 95
    COMMA           reduce using rule 15 (declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET .)
    COLON           reduce using rule 15 (declaracion_variable -> ID O_ABRACKET CTE_INT C_ABRACKET .)


state 74

    (3) bloque -> O_CBRACKET bloque_prime C_CBRACKET .

    $end            reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    ID              reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    RETURN          reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    READ            reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    WRITE           reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    IF              reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    FOR             reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    WHILE           reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    C_CBRACKET      reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    FUNCTION        reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    MAIN            reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)
    ELSE            reduce using rule 3 (bloque -> O_CBRACKET bloque_prime C_CBRACKET .)


state 75

    (4) bloque_prime -> estatuto bloque_prime .

    C_CBRACKET      reduce using rule 4 (bloque_prime -> estatuto bloque_prime .)

